# pop3-v2-client

./: CMakeLists.txt  LICENSE  README.md
client/include/: account.h  client.h  db.h  email.h  pop3-v2-cli.h  table.h  utils.h
client/src/: client.cpp  main.cpp  pop3-v2-cli.cpp  utils.cpp
client/src/state/: account.cpp  email.cpp
common/: protocol.cpp  utils.cpp  utils.h
config/: buffer.h
docs/: directory-structure.txt
types/: clientInput.h  state.h
